# progred

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml  semantics.progred
experiments/: lambda-calculus-exploration.md
experiments/libfive/: shiny-cube-knurled.io  shiny-cube.io
progred/: structured-editor-type-system-reference.md
progred/progred/: AppDelegate.swift  ContentView.swift  D.swift  DView.swift  Editor.swift  EntityView.swift  Id.swift  MutGid.swift  Projection.swift  Schema.swift  progredApp.swift
progred/progred.xcodeproj/: project.pbxproj
progred/progredTests/: IdTests.swift  SchemaTests.swift  TypeMatchingTests.swift
progred_core/: Cargo.toml
progred_core/src/: builtin_values.rs  d.rs  document.rs  editor.rs  generated.rs  graph_view_state.rs  lib.rs  list_iter.rs  math.rs  path.rs  render.rs  selection.rs  type_match.rs  type_possibility.rs  type_system.rs
progred_graph/src/: gid.rs  id.rs  lib.rs  mutgid.rs  path.rs  selection.rs
progred_loader/: Cargo.toml
progred_loader/src/: lib.rs
progred_macros/: Cargo.toml
progred_macros/src/: lib.rs
prototype/: README  tslint.json  typings.json  webpack.config.js
prototype-egui/: AGENTS.md  MOTIVATION.md  README.md  semantics.progred
prototype-egui/docs/: return-from-haskell.md
prototype-egui/src/: main.rs
prototype-haskell/: .gitignore  MOTIVATION.md  Makefile  README.md  RUST_PIVOT.md  cabal-wasm.project  cabal.project  ghc_wasm_jsffi.js  hie.yaml  index.html  prototype-haskell-wasm.cabal  prototype-haskell.cabal
prototype-haskell/app/: Main.hs
prototype-haskell/gtk/: prototype-haskell-gtk.cabal
prototype-haskell/gtk/src/: Main.hs
prototype-haskell/halay/src/: Halay.hs
prototype-haskell/halay/src/Halay/: Geometry.hs
prototype-haskell/halay/test/: Main.hs  clay_oracle.c
prototype-haskell/imgui/: imgui.ini  prototype-haskell.cabal
prototype-haskell/imgui/src/: Main.hs
prototype-haskell/platform/stub/Progred/: Platform.hs
prototype-haskell/platform/stub/Puri/: Platform.hs
prototype-haskell/platform/wasm/Progred/: Platform.hs
prototype-haskell/platform/wasm/Progred/Wasm/: Exports.hs
prototype-haskell/progred/: .gitignore
prototype-haskell/progred/app/: Main.hs
prototype-haskell/progred/platform/wasm/Progred/Wasm/: Exports.hs
prototype-haskell/progred/src/Progred/: App.hs  BuiltinLabels.hs  Builtins.hs  Document.hs  Editor.hs  FreshUUID.hs  Graph.hs  GraphContext.hs  MapGraph.hs  PathTrie.hs  Projection.hs
prototype-haskell/progred/src/Progred/Render/: Graph.hs  List.hs  Raw.hs
prototype-haskell/progred/src/Progred/Widgets/: Identicon.hs
prototype-haskell/progred/tauri/: Cargo.toml  tauri.conf.json
prototype-haskell/progred/tauri/capabilities/: default.json
prototype-haskell/progred/tauri/src/: main.rs
prototype-haskell/progred/test/: Main.hs
prototype-haskell/progred/web/: index.html  package-lock.json  package.json
prototype-haskell/puri-halay/src/Puri/: Halay.hs
prototype-haskell/puri-halay/src/Puri/Widgets/: Frame.hs  ScrollViewport.hs
prototype-haskell/puri/Puri/: Geometry.hs  Handler.hs  Lens.hs
prototype-haskell/puri/Puri/Widgets/: TextBox.hs
prototype-haskell/puri/platform/stub/Puri/: Platform.hs
prototype-haskell/puri/platform/wasm/Puri/: Platform.hs
prototype-haskell/puri/src/Puri/: Canvas.hs  Core.hs  Geometry.hs  Handler.hs  KeyCode.hs  Viewport.hs  Widget.hs  Widgets.hs
prototype-haskell/puri/src/Puri/Widgets/: Button.hs  Frame.hs  LineEdit.hs
prototype-haskell/src/: Main.hs
prototype-haskell/src-tauri/: tauri.conf.json
prototype-haskell/src/Progred/: App.hs  Canvas.hs  Frame.hs  Geometry.hs  Gid.hs  Handler.hs  KeyCode.hs  Lens.hs  MapGid.hs  UI.hs  View.hs  Viewport.hs  Widget.hs
prototype-haskell/src/Progred/Widget/: Interpreter.hs
prototype-haskell/src/Progred/Widgets/: Button.hs  TextBox.hs
prototype-haskell/uig/src/: UIG.hs
prototype-haskell/wasm/: prototype-haskell-wasm.cabal
prototype-haskell/wasm/src/: Main.hs
prototype-linebender/: AGENTS.md  Cargo.toml  MOTIVATION.md  rustfmt.toml
prototype-linebender/docs/: model.md  puri.md
prototype-linebender/progred/: Cargo.toml
prototype-linebender/progred/src/: conventions.rs  filter.rs  graph_view.rs  history.rs  identicon.rs  main.rs  raw.rs  sheet.rs  sources.rs  store.rs
prototype-linebender/progred_graph/: Cargo.toml
prototype-linebender/puri/: Cargo.toml
prototype-linebender/puri-vello/: Cargo.toml
prototype-rust/: AGENTS.md  Cargo.toml  MOTIVATION.md  README.md
prototype-rust/docs/: migration.md
prototype-rust/progred_core/: Cargo.toml
prototype-rust/progred_core/src/: builtin_values.rs  generated.rs  graph_view_state.rs  navigate.rs  path.rs  render.rs  spanningtree.rs
prototype-rust/progred_graph/: Cargo.toml
prototype-rust/src/: main.rs
prototype-swift/: MOTIVATION.md  structured-editor-type-system-reference.md
prototype-swift/progred/: Editor.swift  (+1 more)
prototype-ts/: .gitignore  PROTOTYPE-SURVEY.md  README  TODO  focus-lab.html  grapheditor.css  grapheditor.html  index.html  package-lock.json  package.json  tsconfig.json  vite.generator.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vitest.config.ts
prototype-ts/fidget/: Cargo.toml
prototype-ts/fidget/src/: lib.rs
src/: d.rs  document.rs  editor.rs  genRenderIfs.ts  generated.rs  list_iter.rs  main.rs  render.rs  ts_runtime.rs
typings/: index.d.ts
v2/: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  semantics.progred  vite.config.ts
v2-rust/: CLAUDE.md  Cargo.toml  README.md  semantics.progred  semantics2.progred
v2-rust/progred_macros/: Cargo.toml
v2-rust/progred_macros/src/: lib.rs
v2-rust/src/: document.rs  generated.rs  id.rs  identicon.rs  list_iter.rs  main.rs  mutgid.rs  path.rs  spanningtree.rs  ts_runtime.rs
v2-rust/src/graph/: id.rs  list_iter.rs  mod.rs  mutgid.rs  path.rs  selection.rs  spanningtree.rs
v2-rust/src/ui/: domain_projections.rs  graph_view.rs  identicon.rs  mod.rs  placeholder.rs  projection.rs  split_view.rs  tree_view.rs
(+454 files in other folders)
