cabal-version: 3.0
name:          prototype-haskell
version:       0.1.0.0
synopsis:      Haskell -> WASM prototype, talks to DOM via JSFFI
build-type:    Simple

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable prototype-haskell
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Progred.Gid
    Progred.Frame
    Progred.Geometry
    Progred.KeyCode
    Progred.Lens
    Progred.MapGid
    Progred.App
    Progred.Canvas
    Progred.Platform
    Progred.Viewport
    Progred.Widget
    Progred.Widgets.Button
    Progred.Widgets.TextBox
  hs-source-dirs:   src
  default-language: GHC2021
  build-depends:
    , base >= 4.18 && < 4.23
    , containers >= 0.6 && < 0.8
    , transformers >= 0.5 && < 0.7

  if os(wasi)
    hs-source-dirs: platform/wasm
    other-modules:  Progred.Wasm.Exports
    build-depends:
      , ghc-experimental ^>= 9.1202

    -- The Makefile selects GHC's WASM backend. The flags below produce a
    -- self-initializing WASI module that the browser shim can boot.
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      -optl-Wl,--export=hs_init

  else
    hs-source-dirs: platform/stub
