cabal-version: 3.0
name:          prototype-haskell
version:       0.1.0.0
synopsis:      Haskell -> WASM prototype, talks to DOM via JSFFI
build-type:    Simple

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library halay
  import:           warnings
  exposed-modules:
    Halay
    Halay.Geometry
  hs-source-dirs:   halay/src
  default-language: GHC2021
  build-depends:
    , base >= 4.18 && < 4.23

test-suite halay-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   halay/test
  default-language: GHC2021
  build-depends:
    , QuickCheck >= 2.14 && < 2.16
    , base >= 4.18 && < 4.23
    , directory >= 1.3 && < 1.4
    , process >= 1.6 && < 1.7
    , prototype-haskell:halay

library puri
  import:           warnings
  exposed-modules:
    Puri.Canvas
    Puri.Handler
    Puri.Geometry
    Puri.KeyCode
    Puri.Lens
    Puri.Viewport
    Puri.Widget
    Puri.Widgets.Button
    Puri.Widgets.Frame
    Puri.Widgets.LineEdit
  other-modules:
    Puri.Platform
  hs-source-dirs:   puri/src
  default-language: GHC2021
  build-depends:
    , base >= 4.18 && < 4.23
    , prototype-haskell:halay

  if os(wasi)
    hs-source-dirs: puri/platform/wasm
    build-depends:
      , ghc-experimental ^>= 9.1202

  else
    hs-source-dirs: puri/platform/stub

test-suite progred-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   progred/test
  default-language: GHC2021
  build-depends:
    , QuickCheck >= 2.14 && < 2.16
    , base >= 4.18 && < 4.23
    , containers >= 0.6 && < 0.8
    , prototype-haskell:progred
    , prototype-haskell:puri
    , uuid-types >= 1.0 && < 1.1

library progred
  import:           warnings
  exposed-modules:
    Progred.App
    Progred.Builtins
    Progred.Document
    Progred.Editor
    Progred.Graph
    Progred.MapGraph
    Progred.Projection
    Progred.Render.List
    Progred.Render.Raw
    Progred.Widgets.Identicon
  hs-source-dirs:   progred/src
  default-language: GHC2021
  build-depends:
    , base >= 4.18 && < 4.23
    , containers >= 0.6 && < 0.8
    , prototype-haskell:halay
    , prototype-haskell:puri
    , random >= 1.2 && < 1.4
    , transformers >= 0.5 && < 0.7
    , uuid-types >= 1.0 && < 1.1

executable prototype-haskell
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   progred/app
  default-language: GHC2021
  build-depends:
    , base >= 4.18 && < 4.23
    , prototype-haskell:progred
    , prototype-haskell:puri

  if os(wasi)
    hs-source-dirs: progred/platform/wasm
    other-modules:  Progred.Wasm.Exports
    build-depends:
      , ghc-experimental ^>= 9.1202

    -- The Makefile selects GHC's WASM backend. The flags below produce a
    -- self-initializing WASI module that the browser shim can boot.
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      -optl-Wl,--export=hs_init
