[package]
name = "progred"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.30"
egui = "0.30"
im = "15"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_core = "0.380.0"
deno_ast = { version = "=0.52.0", features = ["transpiling"] }
serde_v8 = "0.289.0"
