cabal-version: 3.0
name:          prototype-haskell-imgui
version:       0.1.0.0
synopsis:      ImGui-based prototype (native, immediate-mode)
build-type:    Simple

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable prototype-haskell-imgui
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: GHC2021
  build-depends:
    , base       ^>= 4.18
    , dear-imgui >= 2.3
    , gl
    , managed
    , sdl2       >= 2.5
    , text
