[package]
name = "progred-fidget"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
fidget = { version = "0.4.3", default-features = false, features = ["mesh"] }
nalgebra = "0.34.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.122"
